@@ -78,6 +78,9 @@ OPTIMIZATIONS
 
 BUG FIXES
 
+PIG-1191:  POCast throws exception for certain sequences of LOAD, FILTER,
+			FORACH (pradeepkth via gates)
+
 PIG-1171: Top-N queries produce incorrect results when followed by a cross statement (rding via olgan)
 
 PIG-1159: merge join right side table does not support comma seperated paths
